CHANGES.txt for Gem Drop Deluxe

April 4, 2021

 * Reorganized source/docs/objects/etc.

 * Replaced magic numbers with labels/#defines/etc.

 * Added "[esc] to exit" kind of message to Help screen.

 * Tweaks to custom title/help font.

RELEASE: 2021_03_21_beta

March 21, 2021
 * Now building an ATR disk image, utilizing uDOS
   (by Dietrich aka Lockpick @ ABBUC forums).
   + Game state (high score, max level reached)
     saved back to the disk.

 * Title screen improvements:
   + Colorful, animated credits.
   + Credits more than just Bill, when applicable.
   + Better layout.
   + Color behind menu buttons.
   + Friendlier rendition of version #.

 * Help screen (press [H] from title screen)

 * Custom font on title screen options section
   and the help screen. (Based on Ubuntu Mono)

 * title-to-font tool now doing double-duty of
   converting a 256x32 pixel bitmap into a
   128 character font

RELEASE: 2021_03_14_beta

March 14, 2021
 * Fancy title screen, with copyright, last score,
   high score, and options menu all displayed.

 * Updated code to build against stock cc65
   (V2.19) rather than requiring my extended-headers.
   (Much of that work was rolled into cc65 upstream,
   or is now moot thanks to alternate solutions.)

 * Reduced space used by fonts; no longer trying to
   merge two versions of game font for non-flicker mode;
   just using one of the existing fonts looks better.

 * Rewrote Super IRG mode VBI and title screen DLI in
   inline assembly, to address stability problems.

 * Disable "attract" mode on menu screen, upon any
   console key input.  Keep it disabled during game.

 * Ran source files through:
   "indent -nbfda -npcs -npsl -bli0"

 * Grabbing version # from Makefile and adding to
   README.txt during release process.

RELEASE: 2015_10_02_alpha

October 2, 2015
 * Adding support for non-flickering mode

RELEASE: 2015_08_15_alpha_1

August 15, 2015
 * Added VERSION definition to Makefile